--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
         classpath "org.grails.plugins:hibernate5:7.0.4"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.2.4"
-        classpath "com.moowork.gradle:gradle-node-plugin:1.0.1"
+        classpath "com.github.node-gradle:gradle-node-plugin:2.2.4"
     }
 }
 
@@ -21,7 +21,10 @@ apply plugin:"org.grails.grails-web"
 apply plugin:"com.github.erdi.webdriver-binaries"
 apply plugin:"com.bertramlabs.asset-pipeline"
 apply plugin:"org.grails.grails-gsp"
-apply plugin:"com.moowork.node"
+
+// Поставил новую версию плагина node-gradle
+// https://github.com/node-gradle/gradle-node-plugin/blob/master/docs/installation.md
+apply plugin: 'com.github.node-gradle.node'
 
 
 repositories {
@@ -112,29 +115,25 @@ assets {
     minifyJs = true
     minifyCss = true
 }
-// Решил вопрос с ошибкой node ivy.xml
-// Ответ нашел тут - https://stackoverflow.com/questions/60667250/got-the-following-error-while-building-a-gradle-project
-//repositories.whenObjectAdded {
-//    if (it instanceof IvyArtifactRepository) {
-//        metadataSources {
-//            artifact()
-//        }
-//    }
-//}
 
 // Посмотрел как делать таски для запуска сборки и копирования
 // Тут - http://guides.grails.org/angular2-combined/guide/index.html
-node {
-    version = '14.15.0'
-    download = false
-    nodeModulesDir = file("src/main/client")
 
+node {
+    // Указываю версию node. директиву где лежат зависимости и рабочую директиву для Node
+    version = '14.15.0'
+    download = true
+    nodeModulesDir = file("${System.getProperty("user.dir")}/src/main/client")
+    workDir = file("${project.buildDir}/nodejs")
 }
+
+// Создаем задачу для сборки client приложения
 task buildClient(type: NpmTask, dependsOn: 'npmInstall') {
     group = 'build'
     description = 'Compile client side assets for production'
     args = ['run', 'build']
 }
+// Создаем задачу для пересборки client приложения
 task copyClientResources(dependsOn: buildClient) {
     group = 'build'
     description = 'Copy client resources into server'
@@ -145,8 +144,11 @@ task copyClientResources(dependsOn: buildClient) {
         }
     }
 }
+// Запуск зависимости для war
 war.dependsOn(buildClient)
-bootRun.dependsOn(copyClientResources)
+// Запуск зависимости для grail build
+bootRun.dependsOn(buildClient)
+// Очистка директории сборки перед началом
 clean {
     delete fileTree(dir: "src/main/webapp")
 }
